# libovr-rs

./: Cargo.toml  LICENSE.md  README.md  build.rs
lib/: LibOVR.lib
src/: ffi.rs  ffi_gl.rs  lib.rs  libovr_ffi.rs  libovr_gl_ffi.rs
